1. Renamed contact field in Contact JPA entity to contactValue and updated usage in code. 2. Added MemberService in AuthenticationServiceImpl to allow sign out for member or user with implementation in MemberServiceImpl. 3. Refactored collect(Collectors.toList()) to Stream::toList() in CalendarMapper, FleenStreamMapper, FleenUser, FollowerMapper, GoogleCalendarMapper 3. Added private constructors to classes including CacheKeyService, PermissionSettings, FleenHttpStatus, GoogleOauth2Scopes, Oauth2WebKey, ResponseMessage, StatusCodeMessage and UserAuthoritiesUtil. 4. Added @Override annotation to MessageRequest sub classes like SendVerificationCodeRequest. 5. Updated use of calendarId in GoogleCreateCalendarResponse. 6. Refactored GoogleOauth2Service and removed unused member variables in LiveBroadcastServiceImpl. 7. Fix bug in Member.isInternalEmailOrEmailIsAnOriginEmail(String, String) 8. Refactored Oauth2AuthenticationRequest to allow checking of Oauth2Authorization and service type presence. 9. Refactored Oauth2Authorization to check for token expiration and equality. 10. Added Oauth2AuthorizationException to add utility methods for checking type of oauth2 exception like invalid grant and get error messages. 11. Added utility methods for Google in Oauth2Source and ReportMessageType. 12. Refactored StorageService to replace switch with if statements and also refactored StreamService to merge nested if statements into one. 12. Removed SendUpdateEmailAddressOrPhoneNumberVerificationCodeDto.java